// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render error snackbar 1`] = `
<DocumentFragment>
  <div
    class="transition-opacity duration-500 opacity-0"
  >
    <div
      class="z-100 fixed inset-x-0 bottom-0 mx-auto mb-6 w-4/5 scale-100 rounded bg-red-500"
    >
      <div
        class="mx-auto max-w-7xl py-3 px-3 sm:px-6 lg:px-8"
      >
        <div
          class="flex flex-wrap items-center justify-between"
        >
          <div
            class="flex w-0 flex-1 items-center"
          >
            <span
              class="flex rounded-lg p-2 bg-red-800"
            >
              <svg
                aria-hidden="true"
                class="h-6 w-6 text-white"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 5.882V19.24a1.76 1.76 0 01-3.417.592l-2.147-6.15M18 13a3 3 0 100-6M5.436 13.683A4.001 4.001 0 017 6h1.832c4.1 0 7.625-1.234 9.168-3v14c-1.543-1.766-5.067-3-9.168-3H7a3.988 3.988 0 01-1.564-.317z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </span>
            <p
              class="ml-3 truncate font-medium text-white"
            >
              <span
                class="md:inline"
              >
                Ups! We where unable to find Pokemons
              </span>
            </p>
          </div>
          <div
            class="order-2 flex-shrink-0 sm:order-3 sm:ml-3"
          >
            <button
              class="-mr-1 flex rounded-md p-2 hover:bg-red-800 focus:outline-none focus:ring-2 focus:ring-white sm:-mr-2"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="h-6 w-6 text-white"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`render success snackbar 1`] = `
<DocumentFragment>
  <div
    class="transition-opacity duration-500 opacity-0"
  >
    <div
      class="z-100 fixed inset-x-0 bottom-0 mx-auto mb-6 w-4/5 scale-100 rounded bg-green-500"
    >
      <div
        class="mx-auto max-w-7xl py-3 px-3 sm:px-6 lg:px-8"
      >
        <div
          class="flex flex-wrap items-center justify-between"
        >
          <div
            class="flex w-0 flex-1 items-center"
          >
            <span
              class="flex rounded-lg p-2 bg-green-800"
            >
              <svg
                aria-hidden="true"
                class="h-6 w-6 text-white"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 5.882V19.24a1.76 1.76 0 01-3.417.592l-2.147-6.15M18 13a3 3 0 100-6M5.436 13.683A4.001 4.001 0 017 6h1.832c4.1 0 7.625-1.234 9.168-3v14c-1.543-1.766-5.067-3-9.168-3H7a3.988 3.988 0 01-1.564-.317z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </span>
            <p
              class="ml-3 truncate font-medium text-white"
            >
              <span
                class="md:inline"
              >
                Pokemon successfully added
              </span>
            </p>
          </div>
          <div
            class="order-2 flex-shrink-0 sm:order-3 sm:ml-3"
          >
            <button
              class="-mr-1 flex rounded-md p-2 hover:bg-green-800 focus:outline-none focus:ring-2 focus:ring-white sm:-mr-2"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="h-6 w-6 text-white"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 18L18 6M6 6l12 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
